--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -26,3 +26,12 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #7298da;
 }
+
+.blog-md li {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+
+.blog-md h1 {
+    margin-left: 10px;
+}
